--- a/src/gateway/requirements.txt
+++ b/src/gateway/requirements.txt
@@ -1,24 +1,29 @@
-astroid==2.9.3
-certifi==2021.10.8
-charset-normalizer==2.0.11
-click==8.0.3
-Flask==2.0.2
+astroid==2.14.1
+certifi==2022.12.7
+charset-normalizer==3.0.1
+click==8.1.3
+colorama==0.4.6
+dill==0.3.6
+dnspython==2.3.0
+Flask==2.2.2
 Flask-PyMongo==2.3.0
-idna==3.3
-isort==5.10.1
-itsdangerous==2.0.1
-jedi==0.18.1
-Jinja2==3.0.3
-lazy-object-proxy==1.7.1
-MarkupSafe==2.0.1
-mccabe==0.6.1
+idna==3.4
+isort==5.12.0
+itsdangerous==2.1.2
+jedi==0.18.2
+Jinja2==3.1.2
+lazy-object-proxy==1.9.0
+MarkupSafe==2.1.2
+mccabe==0.7.0
 parso==0.8.3
-pika==1.2.0
-platformdirs==2.5.0
-pylint==2.12.2
-pymongo==4.0.1
-requests==2.27.1
-toml==0.10.2
-urllib3==1.26.8
-Werkzeug==2.0.3
-wrapt==1.13.3
+pika==1.3.1
+platformdirs==2.6.2
+pylint==2.16.0
+pymongo==4.3.3
+requests==2.28.2
+tomli==2.0.1
+tomlkit==0.11.6
+typing_extensions==4.4.0
+urllib3==1.26.14
+Werkzeug==2.2.2
+wrapt==1.14.1
